# video-integrity-sdk

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  config.yaml  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  test_quick.py
.github/workflows/: ci.yml
docs/: design.md
examples/: embed_and_verify.py  verify_via_api.py
js-sdk/: index.js  package.json
js-sdk/examples/: node-verify.js
monitoring/: prometheus.yml
src/: __init__.py  api.py  cli.py  config.py  decoder.py  encoder.py  keys.py  train.py  utils.py  video_analysis.py
tests/: test_api.py  test_config.py  test_embed_verify.py  test_integration.py  test_keys.py  test_models.py  test_utils.py  test_video_analysis.py
